SVN
-------------------------------

JDO:   Resolved issue CASTOR-1871 using contribution from Ralf Joachim [Ralf.joachim@syscon-world.de]
       Changed package name of performance test framework.
       Details: http://jira.codehaus.org/browse/CASTOR-1871
       (Ralf - 20070217)

JDO:   Resolved issue CASTOR-1870 using contribution from Ralf Joachim [Ralf.joachim@syscon-world.de]
       Moved Performance Test Framework of Castor Persistence to its own module.
       Details: http://jira.codehaus.org/browse/CASTOR-1870
       (Ralf - 20070217)

XML:   Resolved issue CASTOR-1866 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added property to Castor's Ant task to allow configuration of 'nameConflictStrategy'.
       Details: http://jira.codehaus.org/browse/CASTOR-1866
       (Werner - 20070217)

XML:   Resolved issue CASTOR-1865 using contribution from Guy Coleman [guy.coleman@prolog.uk.com]
       Fixed problem with 'required' attributes in the context of containers.
       Details: http://jira.codehaus.org/browse/CASTOR-1865
       (Werner - 20070216)

XML:   Resolved issue CASTOR-1852 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added an 'automatic class name conflict resolution' mode to the XML code generator.
       Details: http://jira.codehaus.org/browse/CASTOR-1852
       (Werner - 20070211)

XML:   Resolved issue CASTOR-1811 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added support for validation of correct order of elements of <xsd:sequence> during 
       unmarshalling
       Details: http://jira.codehaus.org/browse/CASTOR-1811
       (Werner - 20070211)

Version 1.1, Feb 10, 2007
-------------------------------

XML:   Resolved issue CASTOR-1198 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       ID resolution now takes validation configuration into account.
       Details: http://jira.codehaus.org/browse/CASTOR-1198
       (Werner - 20070201)
